# PyQmSystem

./: CMakeLists.txt
QmSystem/: CMakeLists.txt  global.h  typesystem_qmsystem.xml
debian/: changelog  control  copyright  python-qmsystem.install  rules
examples/accelerometer/: main.py
examples/activity/: main.py
examples/als/: main.py
examples/battery/: main.py
examples/cabc/: main.py
examples/callstate/: main.py
examples/compass/: main.py
examples/displaystate/: main.py
examples/heartbeat/: main.py
examples/hw_keys/: main.py
examples/led/: main.py
examples/locks/: main.py
examples/orientation/: main.py
examples/tap/: main.py
examples/thermal/: main.py
